feat(moreinfo): Add GovUK accordion for parent-child records navigation
Integrated the GovUK Accordion Nunjucks component to display parent and
grandparent records with title and links. Also added child and
grandchild records enabling useres to navigate to the respective records
via a clickable links which redirect to the dsp-ui

IssueID NCEA-369

--- a/src/assets/sass/templates/_details.scss
+++ b/src/assets/sass/templates/_details.scss
@@ -160,3 +160,21 @@
     padding: 8px;
   }
 }
+
+// Parent/Child record accordion styles
+.govuk-accordion__show-all {
+  display: none;
+}
+
+.govuk-accordion__section-toggle .govuk-accordion__section-toggle-focus .govuk-accordion__section-toggle-text {
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px;
+  color: #000;
+}
+
+.record-link-item {
+  margin-bottom: 10px;
+}
+
