--- a/src/views/partials/details/template.njk
+++ b/src/views/partials/details/template.njk
@@ -1,4 +1,5 @@
 {%- from "govuk/components/tag/macro.njk" import govukTag -%}
+{%- from "govuk/components/accordion/macro.njk" import govukAccordion -%}
 
 {% from "macros/ncea-contribution.njk" import nceaContribution %}
 
@@ -10,7 +11,71 @@
           {% if option.label === 'nceaContribution' and params.assetPath %}
             {% if option.displayValue !== '' %}
               <h2 class='tab-content-label'></h2>
-              <div class='tab-content-value'>{{nceaContribution (params.assetPath, option.displayValue )}}</div> 
+              <div class='tab-content-value'>{{nceaContribution (params.assetPath, option.displayValue )}}</div>
+            {% endif %}
+          {% elseif option.label === 'Parent record(s)' or option.label === 'Child record(s)' %}
+            <h2 class='tab-content-label'>{{ option.label | safe }}</h2>
+            {% set relatedRecords = option.rawValue or [] %}
+            {% set relationKey = 'grandParent' %}
+            {% if option.label == 'Child record(s)' %}
+              {% set relationKey = 'grandChildren' %}
+            {% endif %}
+            {% if relatedRecords and relatedRecords | length > 0 %}
+              {% set hasAnyRecords = false %}
+              {% for record in relatedRecords %}
+                {% set nestedItems = record[relationKey] %}
+                {% if nestedItems and nestedItems | length > 0 %}
+                  {% set hasAnyRecords = true %}
+                {% else %}
+                  {% if record.id %}
+                    {% set hasAnyRecords = true %}
+                  {% endif %}
+                {% endif %}
+              {% endfor %}
+              {% if hasAnyRecords %}
+                <div class='tab-content-value'>
+                  {% for record in relatedRecords %}
+                    {% set nestedItems = record[relationKey] %}
+                    {% if nestedItems and nestedItems | length > 0 %}
+                      {% set accordionItems = [] %}
+                      {% set nestedLinks = [] %}
+                      {% for nested in nestedItems %}
+                        {% set link = '<li><a class="govuk-link tab-content-label" href="/explore/' ~ nested.id ~ '" target="_blank" rel="noopener noreferrer">' ~ (nested.title or nested.id) ~ '</a></li>' %}
+                        {% set nestedLinks = nestedLinks.concat([link]) %}
+                      {% endfor %}
+                      {% set contentHtml = '<ul class="govuk-list govuk-list--bullet">' ~ nestedLinks | join('') ~ '</ul>' %}
+                      {% set headingFallback = 'Parent record' %}
+                      {% if option.label == 'Child record(s)' %}
+                        {% set headingFallback = 'Child record' %}
+                      {% endif %}
+                      {% set headingText = (record.title or record.id or headingFallback) | escape %}
+                      {% set accordionItems = accordionItems.concat([{
+                        heading: { html: '<span class="tab-content-label">' ~ headingText ~ '</span>' },
+                        content: { html: contentHtml }
+                      }]) %}
+                      {% set accordionId = (option.label | lower | replace(' ', '-') ) ~ '-accordion-' ~ loop.index %}
+                      {{ govukAccordion({
+                        id: accordionId,
+                        items: accordionItems,
+                        hideAllSections: true,
+                        showAllSections: false
+                      }) }}
+                    {% else %}
+                      <div class="record-link-item"><a class="govuk-link tab-content-label" href="/explore/{{ record.id }}" target="_blank" rel="noopener noreferrer">{{ record.title or record.id }}</a></div>
+                    {% endif %}
+                  {% endfor %}
+                </div>
+              {% else %}
+                {{govukTag({
+                  text: "Unavailable",
+                  classes: "govuk-tag--grey tab-content-value__not-provided"
+                })}}
+              {% endif %}
+            {% else %}
+              {{govukTag({
+                text: "Unavailable",
+                classes: "govuk-tag--grey tab-content-value__not-provided"
+              })}}
             {% endif %}
           {% else %}
             <h2 class='tab-content-label'>{{ option.label | safe }}</h2>
@@ -25,7 +90,7 @@
               })}}
             {% endif %}
           {% endif %}
-          
+
         </div>
       {% endif %}
       {% if option.label and option.label === 'map' and option.displayValue %}
