feat(pages): Categegory detail page
We have implemented new Categories Detail page with sections Category
description, Key products, Case Study & Featured dataset.

IssueID # NCEA-401

--- a/public/css/categoriesDetail.css
+++ b/public/css/categoriesDetail.css
@@ -29,7 +29,7 @@
 
 .landingPage__partnersLogo-rightsection {
   flex: 0 0 200px; /* fixed width for image column */
-  margin-top: -20px;
+  margin-top: -20px !important;
 }
 
 .case-study-image {
