--- a/src/assets/sass/templates/_home.scss
+++ b/src/assets/sass/templates/_home.scss
@@ -111,3 +111,50 @@
     }
   }
 }
+.data-categories {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  gap: 24px;
+  margin-left: 0;
+  margin-right: 0;
+
+  >.govuk-grid-column-full {
+    grid-column: 1 / -1;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    float: none;
+  }
+
+  >.govuk-grid-column-one-third {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    float: none;
+  }
+
+  @include govuk-media-query($from: tablet, $until: desktop) {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  @include govuk-media-query($until: tablet) {
+    grid-template-columns: 1fr;
+  }
+
+  &__image {
+    display: block;
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+
+  &__link {
+    display: inline-block;
+  }
+}
