feat(moreinfo):SPIKE - Evaluate session replay tools
PoC for using session replay tools (eg PostHog, OpenReplay & Hotjar) to observe how users are using the live NCEA app.
The purpose of this spike is to evaluate and recommend a suitable session replay tool.

IssueID NCEA-391

--- a/src/views/partials/quick_search/template.njk
+++ b/src/views/partials/quick_search/template.njk
@@ -18,7 +18,7 @@
             classes: 'search-block__label'
           },
           suffix: {
-            html: '<button type="submit" class="search-block__button" data-do-quick-search="true">Search</button>'
+            html: '<button type="submit" class="search-block__button" data-do-quick-search="true" onclick="PostHog.trackEvent(\'search_clicked\', { page: \'home\' })">Search</button>'
           },
           classes: 'govuk-input govuk-!-margin-bottom-0 search-block__input',
           spellcheck: false,
