--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -24,6 +24,12 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
   <meta name="version" content="v{{appVersion}}">
+  {# PostHog Configuration #}
+  <script>
+    window.posthogEnabled = {{ posthogEnabled | default(false) }};
+    window.posthogApiKey = "{{ posthogApiKey | default('') }}";
+    window.posthogHost = "{{ posthogHost | default('https://eu.posthog.com') }}";
+  </script>
 {% endblock %}
 
 {% set cookieHtml %}
@@ -172,4 +178,6 @@
   </script>
   <script type="text/javascript" src="{{ assetPath }}/scripts/appinsights.js"></script>
   <script type="module" src="{{ assetPath }}/scripts/customScripts.js"></script>
+  {# PostHog Analytics - Page views, button clicks, session replay, feature flags #}
+  <script type="text/javascript" src="{{ assetPath }}/scripts/posthog.js"></script>
 {% endblock %}
