fix(pages): Case Study Images Size Consistency
- Align Case Study all images with similar hight.
- Added divider line missing above Product Bruchure section.
o
IssueID #NCEA-401

--- a/src/views/screens/about/template.njk
+++ b/src/views/screens/about/template.njk
@@ -81,7 +81,7 @@
       </section>
     {% endif %}
     {% include "partials/home_data_categories/template.njk" %}
-    <section class="landingPage__partnersLogo">
+    <section class="landingPage__partnersLogo educational-copy-container__heading-m">
       <div class="landingPage__partnersLogo-leftsection">
         <h2 class="govuk-heading-m">Product Brochure</h2>
          <p class="govuk-body govuk-!-margin-bottom-6">
