--- a/src/views/partials/categories_detail/case_studies.njk
+++ b/src/views/partials/categories_detail/case_studies.njk
@@ -1,6 +1,6 @@
-<h2 class="cate-h2 govuk-heading-m govuk-\!-static-margin-0 educational-copy-container__heading-m">Case studies</h2>
+<h2 class="cate-h2 govuk-heading-m govuk\!-static-margin-0 educational-copy-container__heading-m">Case studies</h2>
 <hr>
-<section class="landingPage__partnersLogo first_case_study">
+<section class="landingPage__partnersLogo first_case_study govuk-!-margin-bottom-6">
   <div class="landingPage__partnersLogo-wrapper">
     <!-- Image section -->
     <div class="landingPage__partnersLogo-rightsection">
@@ -18,8 +18,8 @@
           Case Study1: Applying a natural capital approach to Fisheries Management Plan
         </strong>
       </p>
-      <p class="govuk-body govuk-!-margin-bottom-6">
-        MMO and Defra are developing England’s first natural capital-based Fisheries
+      <p class="govuk-body case-study-description">
+        MMO and Defra are developing England's first natural capital-based Fisheries
         Management Plan (FMP) for pelagic fisheries in the south-west and Celtic Sea.
         This is using the best practice guidance for taking a natural capital approach
         that MMO developed through mNCEA. This includes taking a partnership approach
@@ -32,7 +32,7 @@
 </section>
 
 <hr>
-<section class="landingPage__partnersLogo sec_study">
+<section class="landingPage__partnersLogo sec_study govuk-!-margin-bottom-6">
   <div class="landingPage__partnersLogo-wrapper">
     <!-- Image section -->
     <div class="landingPage__partnersLogo-rightsection">
@@ -45,15 +45,15 @@
           Case Study2: Arts-based approaches to assess Cultural Ecosystem Services in the East Marine Plan area
         </strong>
       </p>
-      <p class="govuk-body govuk-!-margin-bottom-6">
-        As part of the Cefas Seascapes project, we explored the use of arts-based approaches to capture Cultural Ecosystem Services from marine and coastal environments. We held four workshops in Lowestoft and Great Yarmouth, engaging participants in creating photomontages that reflected their personal connections to the marine and coastal environment. The process resulted in the production of a diverse range of artwork and interviews that captured participants thoughts and a narrative about what they had portrayed in their art works. It provided a richer understanding of the values of Cultural Ecosystem Services than traditional survey methods alone. This kind of evidence can complement traditional economic methods to inform more holistic trade-off analysis and decision making that takes into account what people value.
+      <p class="govuk-body case-study-description">
+        As part of the Cefas Seascapes project, we explored the use of arts-based approaches to capture Cultural Ecosystem Services from marine and coastal environments. We held four workshops in Lowestoft and Great Yarmouth, engaging participants in creating photomontages that reflected their personal connections to the marine and coastal environment. The process resulted in the production of a diverse range of artwork and interviews that captured participants thoughts and a narrative about what they had portrayed in their art works...
       </p>
     </div>
   </div>
 </section>
 
 <hr>
-<section class="landingPage__partnersLogo third_case_study">
+<section class="landingPage__partnersLogo third_case_study govuk-!-margin-bottom-6">
   <div class="landingPage__partnersLogo-wrapper">
     <!-- Image section -->
     <div class="landingPage__partnersLogo-rightsection">
@@ -66,8 +66,8 @@
           Case Study3: Citizen science seabird monitoring programme
         </strong>
       </p>
-      <p class="govuk-body govuk-!-margin-bottom-6">
-        Volunteer Seabirds at Sea (VSAS) is a citizen science initiative which recruits and trains volunteers to collect high quality seabirds at-sea data from vessels of opportunity around the UK. JNCC’s Marine Birds project expanded the Volunteer Seabirds at Sea (VSAS) monitoring programme into England, building new citizen science volunteer networks and utilising existing ferry routes to capture high quality marine bird data.
+      <p class="govuk-body case-study-description">
+        Volunteer Seabirds at Sea (VSAS) is a citizen science initiative which recruits and trains volunteers to collect high quality seabirds at-sea data from vessels of opportunity around the UK. JNCC's Marine Birds project expanded the Volunteer Seabirds at Sea (VSAS) monitoring programme into England, building new citizen science volunteer networks and utilising existing ferry routes to capture high quality marine bird data.
       </p>
     </div>
   </div>
