fix(moreinfo): Fix the new line issue in general tab content
New line is not getting in the general tab content, fixed the format issue.

IssueID # NCEA: 382

--- a/src/assets/sass/templates/_details.scss
+++ b/src/assets/sass/templates/_details.scss
@@ -108,7 +108,9 @@
 
 .tab-content-value {
   p {
+    margin: 0;
     margin-bottom: 20px;
+    white-space: pre-line;
   }
 
   a {
@@ -177,4 +179,3 @@
 .record-link-item {
   margin-bottom: 10px;
 }
-
