fix(pages): Case Study Images Size Consistency
Align Case Study all images with similar hight.
Added divider line missing above Product Bruchure section.

IssueID #NCEA-400, #NCEA-401

--- a/src/views/partials/categories_detail/case_studies.njk
+++ b/src/views/partials/categories_detail/case_studies.njk
@@ -46,7 +46,7 @@
         </strong>
       </p>
       <p class="govuk-body case-study-description">
-        As part of the Cefas Seascapes project, we explored the use of arts-based approaches to capture Cultural Ecosystem Services from marine and coastal environments. We held four workshops in Lowestoft and Great Yarmouth, engaging participants in creating photomontages that reflected their personal connections to the marine and coastal environment. The process resulted in the production of a diverse range of artwork and interviews that captured participants thoughts and a narrative about what they had portrayed in their art works...
+        As part of the Cefas Seascapes project, we explored the use of arts-based approaches to capture Cultural Ecosystem Services from marine and coastal environments. We held four workshops in Lowestoft and Great Yarmouth, engaging participants in creating photomontages that reflected their personal connections to the marine and coastal environment. The process resulted in the production of a diverse range of artwork and interviews that captured participants thoughts and a narrative about what ...
       </p>
     </div>
   </div>
