--- a/src/views/partials/categories_detail/featured_datasets.njk
+++ b/src/views/partials/categories_detail/featured_datasets.njk
@@ -1,26 +1,33 @@
-<h2 class="govuk-heading-m govuk-\!-static-margin-0 educational-copy-container__heading-m">Featured datasets</h2>            
-<hr>
-<div class="cate-featured-datasets">                
-    <p class="govuk-body"><b><a class="govuk-link" href="/natural-capital-ecosystem-assessment">Peaty Soils Location</a></b></p>
-    <p class="cate-pby govuk-body govuk-!-margin-bottom-5">Published by: Natural England</p>                
-</div>
-<hr>
-<div class="cate-featured-datasets">                
-    <p class="govuk-body"><b><a class="govuk-link" href="/natural-capital-ecosystem-assessment">Soil Erosion and Compaction Risk Groups</a></b></p>
-    <p class="cate-pby govuk-body govuk-!-margin-bottom-5">Published by: Department of Environment, Food & Rural Affairs</p>                
-</div>
-<hr>
-<div class="cate-featured-datasets">                
-    <p class="govuk-body"><b><a class="govuk-link" href="/natural-capital-ecosystem-assessment">England Peat Map</a></b></p>
-    <p class="cate-pby govuk-body govuk-!-margin-bottom-5">Published by: Natural England</p>                
-</div>
-<hr>
-<div class="cate-featured-datasets">                
-    <p class="govuk-body"><b><a class="govuk-link" href="/natural-capital-ecosystem-assessment">Forestry England Soils</a></b></p>
-    <p class="cate-pby govuk-body govuk-!-margin-bottom-5">Published by: Forestry Commission</p>                
-</div>
-<hr>
-<div class="cate-featured-datasets">                
-    <p class="govuk-body"><b><a class="govuk-link" href="/natural-capital-ecosystem-assessment">England Peat Map Peaty Soil Extent</a></b></p>
-    <p class="cate-pby govuk-body">Published by: Natural England</p>                
-</div>
+<h2 class="govuk-heading-m govuk-\!-static-margin-0 educational-copy-container__heading-m">Featured datasets</h2>          
+<ul class="govuk-list">
+    <li>
+        <div class="cate-featured-datasets">                
+            <p class="govuk-body"><strong><a class="govuk-link" href="/natural-capital-ecosystem-assessment">Peaty Soils Location</a></strong></p>
+            <p class="cate-pby govuk-body">Published by: Natural England</p>                
+        </div>
+    </li>
+    <li>
+        <div class="cate-featured-datasets">                
+            <p class="govuk-body"><strong><a class="govuk-link" href="/natural-capital-ecosystem-assessment">Soil Erosion and Compaction Risk Groups</a></strong></p>
+            <p class="cate-pby govuk-body">Published by: Department of Environment, Food & Rural Affairs</p>                
+        </div>
+    </li>
+    <li>
+        <div class="cate-featured-datasets">                
+            <p class="govuk-body"><strong><a class="govuk-link" href="/natural-capital-ecosystem-assessment">England Peat Map</a></strong></p>
+            <p class="cate-pby govuk-body">Published by: Natural England</p>                
+        </div>
+    </li>
+    <li>
+        <div class="cate-featured-datasets">                
+            <p class="govuk-body"><strong><a class="govuk-link" href="/natural-capital-ecosystem-assessment">Forestry England Soils</a></strong></p>
+            <p class="cate-pby govuk-body">Published by: Forestry Commission</p>                
+        </div>
+    </li>
+    <li>
+        <div class="cate-featured-datasets">                
+            <p class="govuk-body"><strong><a class="govuk-link" href="/natural-capital-ecosystem-assessment">England Peat Map Peaty Soil Extent</a></strong></p>
+            <p class="cate-pby govuk-body">Published by: Natural England</p>                
+        </div>
+    </li>
+</ul>
