--- a/src/views/partials/categories_detail/key_videos.njk
+++ b/src/views/partials/categories_detail/key_videos.njk
@@ -1,5 +1,5 @@
 <h2 class="govuk-heading-m">
-    Video: Transforming Water Management: A Source to Sea Approach
+    Transforming Water Management: A Source to Sea Approach
 </h2>
 <figure class="video-container">
     <iframe
@@ -10,5 +10,5 @@
     </iframe>    
 </figure>
 <p class="govuk-body govuk-!-margin-bottom-6 cat-video-capt">
-        <b>Video caption</b>: mNCEA developed &lsquo;source to sea&rsquo; approaches that considers impacts and interventions from catchment to coast and out to sea. This could reform the future management of our water environment.
+        <small><strong>Video caption</strong>: mNCEA developed &lsquo;source to sea&rsquo; approaches that considers impacts and interventions from catchment to coast and out to sea. This could reform the future management of our water environment.</small>
 </p>
