--- a/src/views/partials/categories_detail/case_studies.njk
+++ b/src/views/partials/categories_detail/case_studies.njk
@@ -1,6 +1,6 @@
 <h2 class="cate-h2 govuk-heading-m govuk\!-static-margin-0 educational-copy-container__heading-m">Case studies</h2>
-<hr>
-<section class="landingPage__partnersLogo first_case_study govuk-!-margin-bottom-6">
+
+<section class="landingPage__partnersLogo case_study">
   <div class="landingPage__partnersLogo-wrapper">
     <!-- Image section -->
     <div class="landingPage__partnersLogo-rightsection">
@@ -15,24 +15,17 @@
     <div class="landingPage__partnersLogo-leftsection">
       <p class="govuk-body govuk-!-margin-bottom-2">
         <strong>
-          Case Study1: Applying a natural capital approach to Fisheries Management Plan
+          Applying a natural capital approach to Fisheries Management
         </strong>
       </p>
       <p class="govuk-body case-study-description">
-        MMO and Defra are developing England's first natural capital-based Fisheries
-        Management Plan (FMP) for pelagic fisheries in the south-west and Celtic Sea.
-        This is using the best practice guidance for taking a natural capital approach
-        that MMO developed through mNCEA. This includes taking a partnership approach
-        to co-develop the plan, with industry, policy makers, regulators, eNGOs and
-        other stakeholders who can influence, or are impacted by fisheries management,
-        in the area.
+        The Cefas Seascapes project explored arts-based approaches to capture Cultural Ecosystem Services from marine and coastal environments. Workshop participants created photomontages reflecting their personal connections to these environments and were interviewed about their artworks. This approach provided a richer understanding of Cultural Ecosystem Services values than traditional survey methods alone, demonstrating how such evidence can complement economic methods to inform more holistic trade-off analysis and decision-making.
       </p>
     </div>
   </div>
 </section>
 
-<hr>
-<section class="landingPage__partnersLogo sec_study govuk-!-margin-bottom-6">
+<section class="landingPage__partnersLogo case_study">
   <div class="landingPage__partnersLogo-wrapper">
     <!-- Image section -->
     <div class="landingPage__partnersLogo-rightsection">
@@ -42,18 +35,17 @@
     <div class="landingPage__partnersLogo-leftsection">
       <p class="govuk-body govuk-!-margin-bottom-2">
         <strong>
-          Case Study2: Arts-based approaches to assess Cultural Ecosystem Services in the East Marine Plan area
+          Arts-based approaches to assess Cultural Ecosystem Services in the East Marine Plan area
         </strong>
       </p>
       <p class="govuk-body case-study-description">
-        As part of the Cefas Seascapes project, we explored the use of arts-based approaches to capture Cultural Ecosystem Services from marine and coastal environments. We held four workshops in Lowestoft and Great Yarmouth, engaging participants in creating photomontages that reflected their personal connections to the marine and coastal environment. The process resulted in the production of a diverse range of artwork and interviews that captured participants thoughts and a narrative about what ...
+        The Cefas Seascapes project explored arts-based approaches to capture Cultural Ecosystem Services from marine and coastal environments. Workshop participants created photomontages reflecting their personal connections to these environments and were interviewed about their artworks. This approach provided a richer understanding of Cultural Ecosystem Services values than traditional survey methods alone, demonstrating how such evidence can complement economic methods to inform more holistic trade-off analysis and decision-making.
       </p>
     </div>
   </div>
 </section>
 
-<hr>
-<section class="landingPage__partnersLogo third_case_study govuk-!-margin-bottom-6">
+<section class="landingPage__partnersLogo case_study ">
   <div class="landingPage__partnersLogo-wrapper">
     <!-- Image section -->
     <div class="landingPage__partnersLogo-rightsection">
@@ -63,7 +55,7 @@
     <div class="landingPage__partnersLogo-leftsection">
       <p class="govuk-body govuk-!-margin-bottom-2">
         <strong>
-          Case Study3: Citizen science seabird monitoring programme
+          Citizen science seabird monitoring programme
         </strong>
       </p>
       <p class="govuk-body case-study-description">
