fix(pages): Feedback implementation on Category detail page
Feedback implementation under Case Studies section on Category detail page

IssueID #

--- a/src/views/partials/categories_detail/case_studies.njk
+++ b/src/views/partials/categories_detail/case_studies.njk
@@ -19,7 +19,7 @@
         </strong>
       </p>
       <p class="govuk-body case-study-description">
-        The Cefas Seascapes project explored arts-based approaches to capture Cultural Ecosystem Services from marine and coastal environments. Workshop participants created photomontages reflecting their personal connections to these environments and were interviewed about their artworks. This approach provided a richer understanding of Cultural Ecosystem Services values than traditional survey methods alone, demonstrating how such evidence can complement economic methods to inform more holistic trade-off analysis and decision-making.
+        MMO and Defra are developing England's first natural capital-based Fisheries Management Plan for pelagic fisheries in the south-west and Celtic Sea, using mNCEA guidance. A partnership approach with industry, policymakers, regulators, eNGOs and other stakeholders has built collaborative understanding of the wider system that affects and is affected by the state of pelagic fish stocks and their management in the FMP area. The partnership has developed legally binding, time-bound actions to deliver better outcomes for fish stocks, their ecosystem and dependent livelihoods.
       </p>
     </div>
   </div>
