--- a/src/views/screens/categories_detail/template.njk
+++ b/src/views/screens/categories_detail/template.njk
@@ -20,7 +20,7 @@
   </header>
 
   <section class="landingPage__articles">
-    <h2 class="govuk-heading-m">{{ type }} </h2>
+    <h2 class="govuk-heading-m">{{ type }}  NCEA</h2>
     <div class="landingPage__intro-content">
     {% include "partials/categories_detail/key_description.njk" %}
     <img src={{ introText.catDetailimageUrl1 }} width="100%" height="533" alt="{{ type }}" >
