--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -24,12 +24,14 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
   <meta name="version" content="v{{appVersion}}">
-  <script>
-    window.posthogEnabled = {{ posthogEnabled | default(false) }};
-    window.posthogApiKey = "{{ posthogApiKey | default('') }}";
-    window.posthogHost = "{{ posthogHost | default('https://eu.posthog.com') }}";
-    window.userEmail = {{ (user and user.email) | tojson | safe }};
-  </script>
+  {% if featureFlag %}
+    <script>
+      window.posthogEnabled = {{ posthogEnabled | default(false) }};
+      window.posthogApiKey = "{{ posthogApiKey | default('') }}";
+      window.posthogHost = "{{ posthogHost | default('https://eu.posthog.com') }}";
+      window.userEmail = {{ (user and user.email) | tojson | safe }};
+    </script>
+  {% endif %}
 {% endblock %}
 
 {% set cookieHtml %}
@@ -178,5 +180,7 @@
   </script>
   <script type="text/javascript" src="{{ assetPath }}/scripts/appinsights.js"></script>
   <script type="module" src="{{ assetPath }}/scripts/customScripts.js"></script>
-  <script type="text/javascript" src="{{ assetPath }}/scripts/posthog.js"></script>
+  {% if featureFlag %}
+    <script type="text/javascript" src="{{ assetPath }}/scripts/posthog.js"></script>
+  {% endif %}
 {% endblock %}
