fix(moreinfo): Fix grandchild rendering and key name mismatch
Resolved the issue with rendering grand child datasets by correcting the
key name from grandChildren to grandChild

IssueID NCEA-372

--- a/src/views/partials/details/template.njk
+++ b/src/views/partials/details/template.njk
@@ -18,7 +18,7 @@
             {% set relatedRecords = option.rawValue or [] %}
             {% set relationKey = 'grandParent' %}
             {% if option.label == 'Child record(s)' %}
-              {% set relationKey = 'grandChildren' %}
+              {% set relationKey = 'grandChild' %}
             {% endif %}
             {% if relatedRecords and relatedRecords | length > 0 %}
               {% set hasAnyRecords = false %}
