--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -24,7 +24,7 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
   <meta name="version" content="v{{appVersion}}">
-  {% if featureFlag %}
+  {% if enablePostHogFeatureFlag %}
     <script>
       window.posthogEnabled = {{ posthogEnabled | default(false) }};
       window.posthogApiKey = "{{ posthogApiKey | default('') }}";
@@ -180,7 +180,7 @@
   </script>
   <script type="text/javascript" src="{{ assetPath }}/scripts/appinsights.js"></script>
   <script type="module" src="{{ assetPath }}/scripts/customScripts.js"></script>
-  {% if featureFlag %}
+  {% if enablePostHogFeatureFlag %}
     <script type="text/javascript" src="{{ assetPath }}/scripts/posthog.js"></script>
   {% endif %}
 {% endblock %}
